syntax = "proto3";

import "google/protobuf/timestamp.proto";

package grpc.api.v1;

option go_package = "github.com/TimRutte/api/proto/api";

message GetReportRequest {
  string name = 1;
  google.protobuf.Timestamp date = 2;
}

message GetReportResponse {
  string name = 1;
  google.protobuf.Timestamp date = 2;
  repeated File files = 3;
}

message File {
  int64 id = 1;
  string url = 2;
  string size = 3;
  string hash = 4;
}

service Api {
  rpc GetReport(GetReportRequest) returns (GetReportResponse);
}
